--- a/src/header.html
+++ b/src/header.html
@@ -18,97 +18,94 @@
     <main>
         <section class="header">
             <div class="container-fluid">
-                <h6 class="font-weight-lighter text-center px-3 py-3">Free Shipping Over ‎$70 + 3 Free Samples With
+                <h6 class="font-weight-lighter text-center py-3">Free Shipping Over ‎$70 + 3 Free Samples With
                     Every Order</h6>
             </div>
         </section>
 
         <header>
             <div class="container">
-                <div class="row text-center">
-                    <div class="col-md-4"></div>
-                    <div class="col-4 pt-2">
+                <div class="row text-center d-none d-md-block">
+                    <div class="col-12 pt-2">
                         <h1 class="font-weight-light">Nude</h1>
                     </div>
-                    <div class="col-4  pt-3"></div>
+                </div>
 
-                    <!-- NAVBAR -->
-                    <div class="col-4 mx-auto">
-                        <nav class="navbar navbar-expand-sm navbar-light text-center sticky-top fixed-top">
-                            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                                data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 pr-sm-2">
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="/index.html">HOME <span class="sr-only">(current)</span></a>
-                                    </li>
-
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SHOP</a>
-                                        <div class="dropdown-menu text-center" aria-labelledby="dropdownId">
-                                            <a class="dropdown-item" href="#">Eyes</a>
-                                            <a class="dropdown-item" href="#">Lips</a>
-                                            <a class="dropdown-item" href="#">Face</a>
-                                        </div>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/src/press.html">PRESS</a>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/src/about.html">ABOUT</a>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">CONTACT</a>
-                                    </li>
-                                </ul>
+              <nav class="navbar navbar-expand-sm navbar-light ">
+                  <a class="navbar-brand d-sm-block d-md-none" href="#"><h1 class="font-weight-light">Nude</h1></a>
+                  <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+                      aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="collapsibleNavId">
+                      <ul class="navbar-nav mx-auto mt-2 mt-lg-0 mx-auto">
+                          <li class="nav-item active">
+                              <a class="nav-link" href="/index.html">HOME<span class="sr-only">(current)</span></a>
+                          </li>
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SHOP</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownId">
+                                <a class="dropdown-item" href="./shop-pages/main-shop.html">EYES</a>
+                                <a class="dropdown-item" href="/src/shop-pages/shop-lips.html">LIPS</a>
+                                <a class="dropdown-item" href="#">FACE</a>  
                             </div>
-                        </nav>
-                    </div>
-                </div>
-            </header>
-    <hr class="my-5">
-    <footer>
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-md-6">
-                    <h5>JOIN OUR NEWSLETTER <sup>*</sup></h5>
-                    <div class="form-group">
-                        <label for="email">Email address:</label>
-                        <input type="email" class="form-control" placeholder="Enter your email here" id="email">
-                    </div>
-                    <button class="btn bg-dark text-white t=font-weight-lighter mt-3 text-center px-5 py-3 w-100">
-                        Subscribe Now</button>
-                </div>
-                <div class="col-md-6">
-                    <div class="row text-center pt-3">
-                        <div class="col-md-4 col-4 mt-4">Stockists</div>
-                        <div class="col-md-4 col-4 mt-4">About</div>
-                        <div class="col-md-4 col-4 mt-4">Contact</div>
-                    </div>
-                    <div class="row text-center pt-3">
-                        <div class="col-md-4 col-4 mt-2">FAQ</div>
-                        <div class="col-md-4 col-4 mt-2">Shipping & Returns</div>
-                        <div class="col-md-4 col-4 mt-2">Store Policy</div>
-                    </div>
-                    <div class="row text-center pt-3">
-                        <div class="col-md-4 col-4 mt-2">FaceBook</div>
-                        <div class="col-md-4 col-4 mt-2">Instagram</div>
-                        <div class="col-md-4 col-4 mt-2">Pinterest</div>
-                    </div>
+                        </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="/src/about.html">ABOUT</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="/src/press.html">PRESS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACT</a>
+                        </li>
+                      </ul>
+                      <form class="form-inline my-2 my-lg-0">
+                          <a class ="nav-link text-decoration-none text-dark" href="#"><i class="fa fa-shopping-bag" aria-hidden="true"></i></a>
+                          <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+                      </form>
+                  </div>
+              </nav>
+            </div>
+        </header>
+        <hr class="my-5">
 
+        <footer class="footer">
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="col-md-6 mx-auto">
+                        <h5>JOIN OUR NEWSLETTER <sup>*</sup></h5>
+                        <div class="form-group">
+                            <label for="email">Email address:</label>
+                            <input type="email" class="form-control" placeholder="Enter your email here" id="email">
+                        </div>
+                        <button class="btn bg-dark text-white t=font-weight-lighter mt-3 text-center px-3 py-3 w-100"
+                            style="font-size: 1rem;">
+                            Subscribe Now</button>
+                    </div>
+                    <div class="col-md-6 mt-5">
+                        <div class="row text-center pt-3">
+                            <div class="col-md-4 col-4 mt-4"><a class="text-dark" href="#">Stockist</a></div>
+                            <div class="col-md-4 col-4 mt-4"><a class="text-dark" href="#">About</a></div>
+                            <div class="col-md-4 col-4 mt-4"><a class="text-dark" href="#">Contact</a></div>
+                        </div>
+                        <div class="row text-center pt-3">
+                            <div class="col-md-4 col-4 mt-2"><a class="text-dark" href="#">FAQ</a></div>
+                            <div class="col-md-4 col-4 mt-2"><a class="text-dark" href="#">Shipping & Return</a></div>
+                            <div class="col-md-4 col-4 mt-2"><a class="text-dark" href="#">Store Policy</a></div>
+                        </div>
+                        <div class="row text-center pt-3">
+                            <div class="col-md-4 col-4 mt-2"><a class="text-dark" href="#">Facebook</a></div>
+                            <div class="col-md-4 col-4 mt-2"><a class="text-dark" href="#">Twitter</a></div>
+                            <div class="col-md-4 col-4 mt-2"><a class="text-dark" href="#">Pinterest</a></div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
-        </div>
 
-    </footer>
-
+        </footer>
 
 
 
@@ -122,20 +119,15 @@
 
 
 
-
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-    </script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+        </script>
 
 </body>
 
