--- a/src/header.html
+++ b/src/header.html
@@ -25,7 +25,7 @@
 
         <header>
             <div class="container">
-                <div class="row text-center d-none d-md-block">
+                <div class="row  d-none d-md-block">
                     <div class="col-12 pt-2">
                         <h1 class="font-weight-light">Nude</h1>
                     </div>
