--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <!-- Carousel -->
 
-        <section class="carousel mx-auto">
+        <section class="carousel mx-auto my-5">
             <div class="container mx-auto">
                 <!-- Image Slider -->
                 <div class="row mb-5 mx-auto">
