--- a/src/press.html
+++ b/src/press.html
@@ -18,67 +18,73 @@
     <main>
         <section class="header">
             <div class="container-fluid">
-                <h6 class="font-weight-lighter text-center px-3 py-3">Free Shipping Over ‎$70 + 3 Free Samples With
+                <h6 class="font-weight-lighter text-center py-3">Free Shipping Over ‎$70 + 3 Free Samples With
                     Every Order</h6>
             </div>
         </section>
 
-        <header>
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-md-4"></div>
-                    <div class="col-4 pt-2">
-                        <h1 class="font-weight-light">Nude</h1>
-                    </div>
-                    <div class="col-4  pt-3"></div>
+        <section class="main">
 
-                    <!-- NAVBAR -->
-                    <div class="col-4 mx-auto">
-                        <nav class="navbar navbar-expand-sm navbar-light text-center sticky-top fixed-top">
-                            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                                data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                                aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 pr-sm-2">
-                                    <li class="nav-item ">
-                                        <a class="nav-link" href="/index.html">HOME <span
-                                                class="sr-only">(current)</span></a>
-                                    </li>
-
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SHOP</a>
-                                        <div class="dropdown-menu text-center" aria-labelledby="dropdownId">
-                                            <a class="dropdown-item" href="#">Eyes</a>
-                                            <a class="dropdown-item" href="#">Lips</a>
-                                            <a class="dropdown-item" href="#">Face</a>
-                                        </div>
-                                    </li>
-
-                                    <li class="nav-item active">
-                                        <a class="nav-link" href="/src/press.html">PRESS</a>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="/src/about.html">ABOUT</a>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">CONTACT</a>
-                                    </li>
-                                </ul>
+            <header>
+                <div class="container">
+                    <div class="row text-center  d-none d-md-block mx-auto">
+                                <div class="col-12 pt-2 mx-auto text-center">
+                                    <h1 class="font-weight-light">Nude</h1>
+                                </div>
                             </div>
-                        </nav>
-                    </div>
                 </div>
-        </header>
 
+                <div class="container">
+                    <nav class="navbar navbar-expand-sm navbar-light">
+                        <a class="navbar-brand d-sm-block d-md-none" href="#">
+                            <h1 class="font-weight-light">Nude</h1>
+                        </a>
+                        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
+                            data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="collapsibleNavId">
+                            <ul class="navbar-nav mx-auto mt-2 mt-lg-0 mx-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="/index.html">HOME<span
+                                            class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">SHOP</a>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownId">
+                                        <a class="dropdown-item" href="src/shop-pages/main-shop.html">EYES</a>
+                                        <a class="dropdown-item" href="/src/shop-pages/shop-lips.html">LIPS</a>
+                                        <a class="dropdown-item" href="#">FACE</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/src/about.html">ABOUT</a>
+                                </li>
+                                <li class="nav-item active-link">
+                                    <a class="nav-link active-link" href="/src/press.html">PRESS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/src/shop-pages/contact-page.html">CONTACT</a>
+                                </li>
+                            </ul>
+                            <form class="form-inline my-2 my-lg-0">
+                                <a class="nav-link text-decoration-none text-dark" href="#"><i
+                                        class="fa fa-shopping-bag" aria-hidden="true"></i></a>
+                                <!-- <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                                      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+                            </form>
+                        </div>
+                    </nav>
+                </div>
+
+            </header>
+        </section>
         <main>
             <div class="container d-block mx-auto">
                 <div class="row">
-                    <div class="col-md-12 text-center">
+                    <div class="col-md-12 text-center mt-5 mb-5">
                         <h3 class="font-weight-lighter py-3">PRESS</h3>
                     </div>
                     <div class="row px-3">
@@ -87,7 +93,7 @@
                                 provident maxime, animi nesciunt expedita voluptatum sunt repellat est minima sit quae
                                 deserunt totam suscipit labore eius consequatur quis. Repellat repudiandae odit nostrum
                             </p>
-                            <p>
+                            <p class="mt-5">
                                 minima rem, praesentium obcaecati eum ullam ratione suscipit sequi, reprehenderit
                                 sapiente
                                 illo ut recusandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet,
@@ -103,7 +109,7 @@
                                 provident maxime, animi nesciunt expedita voluptatum sunt repellat est minima sit quae
                                 deserunt totam suscipit labore eius consequatur quis. Repellat repudiandae odit nostrum
                             </p>
-                            <p>
+                            <p class="mt-5">
                                 minima rem, praesentium obcaecati eum ullam ratione suscipit sequi, reprehenderit
                                 sapiente
                                 illo ut recusandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet,
